# pandas-entity-matching

./: .gitignore  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
dist_build/: pandas_entity_matcher-0.1.0-py3-none-any.whl
entity_matcher/: EntityMatcher.py  __init__.py  block_processing.py  blocking.py  config.py  main.py  matching.py  preprocess.py
entity_matcher/matching/: cosine.py  exact.py  levenshtein.py
entity_matcher/utils/: __init__.py  review.py  summarize.py
tests/: setup.py  test_all.py  test_block_processing.py  test_blocking.py  test_entity_matcher.py  test_matching.py  test_preprocess.py  test_utils.py
