[metadata]
name = pandas_entity_matcher
version = 0.1.0
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgOpenDataTools/pandas-entity-matching
description = Entity Matching routines that play nicely with pandas DataFrames.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
python_requires = >=3.12
zip_safe = True
include_package_data = True
install_requires =
    build
    click
    iniconfig
    joblib
    memory-profiler
    nltk
    numpy
    packaging
    pandas
    pluggy
    psutil
    pytest
    python-dateutil
    pytz
    regex
    scikit-learn
    scipy
    six
    threadpoolctl
    tqdm
    tzdata